<resources>
    <string name="app_name">KidsLand</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="utilizador_2">Utilizador 2</string>
    <string name="bem_vindo">Bem-Vindo !</string>
    <string name="utilizador_3">Utilizador 3</string>
    <string name="utilizador_1">Utilizador 1</string>
    <string name="logo1">Logo</string>
    <string name="quem_est_desse_lado">Quem está desse lado?</string>
    <string name="atividades_para_ti">ATIVIDADES PARA TI</string>
    <string name="string_atividades_para_ti">ATIVIDADES PARA TI</string>
    <string name="seleciona_as_estrelinhas">Seleciona as estrelinhas!</string>
    <string name="diz_nos_se_gostaste">DIZ-NOS SE GOSTASTE!</string>
    <string name="quantas_mais_estrelinhas_mais_gostaste">Quantas mais estrelinhas, mais gostaste!</string>
    <string name="logo2">Logo</string>
    <string name="criar1">Criar</string>
    <string name="crie_o_seu_perfil">Crie o seu Perfil !</string>
    <string name="nome_de_utilizador">Nome de Utilizador:</string>
    <string name="data_de_nascimento1">Data de Nascimento:</string>
    <string name="localiza_o">Localização</string>
    <string name="armazenamento">Armazenamento</string>
    <string name="c_mara">Câmara</string>
    <string name="defini_es">Definições</string>
    <string name="icon1">Icon</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="faixa_et_ria">Faixa Etária:</string>
    <string name="data_de_nascimento">Data de Nascimento:</string>
    <string name="logo">Logo</string>
    <string name="visualizar_dados">Visualizar Dados</string>
    <string name="criar">Criar</string>
    <string name="nome_de_utilizador1">Nome de utilizador:</string>
    <string name="icon">Icon</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_activity_menu">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main3">MainActivity3</string>
    <string name="title_activity_request_password">RequestPasswordActivity</string>
    <string name="group1">Como me posso registar numa Atividade?</string>
    <string name="group2">Que idade preciso de ter para participar numa Atividade?</string>
    <string name="group3">Em que sítio são as atividades?</string>
    <string name="group4">Quantos pontos necessito para passar de nível?</string>
    <string name="group5">Quem é que organiza as atividades?</string>
    <string name="group6">Vão mais crianças participar nas atividades?</string>

    <string-array name="group1">
        <item>Para te registares numa atividade, deves ir à página "Atividades" e clicar em "Participar" na Atividade que queres participar!
            Para Cancelar, basta clicares de novo em cima de "Inscrito".</item>
    </string-array>
    <string-array name="group2">
        <item>Não existe uma idade minima para participar nas nossas atividades! As nossas atividades são divertidas para todas as idades,
            e de certeza que vais gostar!</item>
    </string-array>

    <string-array name="group3">
        <item>A localização de cada atividade encontra-se na informação das atividades. Poderás também ir à pagina "Mapa", e ver onde ficam as atividades!</item>
    </string-array>
    <string-array name="group4">
        <item>O número de pontos necessários para passar de nível depende da quantidade de atividades que realizares! Por isso, faz muitas atividades
        e vais ver que vais aumentar de nível! </item>
    </string-array>
    <string-array name="group5">
        <item>As atividades que encontras no separador Atividades, são preparadas por Instituições que selecionamos cuidadosamente!  </item>
    </string-array>

    <string-array name="group6">
        <item>Depende de quantas crianças se inscreverem na atividade. Chama os teus amigos para participar também, e diverte-te! </item>
    </string-array>



</resources>