<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#46D0D9"
    tools:context=".VisualizarDadosCriancaActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="419dp"
        android:layout_height="734dp"
        android:layout_marginTop="200dp"
        android:contentDescription="@android:string/untitled"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.884"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/vetor1" />

    <EditText
        android:id="@+id/editTextTextFaixa"
        android:layout_width="203dp"
        android:layout_height="32dp"
        android:layout_marginBottom="148dp"
        android:background="@drawable/textfieldround"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.81"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFaixa"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textFaixa"
        android:layout_width="107dp"
        android:layout_height="19dp"
        android:fontFamily="@font/rubik_light"
        android:text="@string/faixa_et_ria"
        android:textColor="#13497B"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextFaixa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextData"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextTextData"
        android:layout_width="203dp"
        android:layout_height="32dp"
        android:layout_marginStart="152dp"
        android:layout_marginLeft="152dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/textfieldround"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/textFaixa"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textData"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_light"
        android:text="@string/data_de_nascimento"
        android:textColor="#13497B"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextData"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.584"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextNome"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/logo" />

    <TextView
        android:id="@+id/editTextTextTitulo"
        android:layout_width="194dp"
        android:layout_height="49dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="40dp"
        android:background="@null"
        android:ems="10"
        android:fontFamily="@font/rancho"
        android:inputType="textPersonName"
        android:text="@string/visualizar_dados"
        android:textColor="#143656"
        android:textSize="38sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/imageView3"
        app:layout_constraintVertical_bias="0.39"
        android:layout_marginStart="16dp"
        tools:ignore="TextViewEdits" />

    <EditText
        android:id="@+id/editTextTextNome"
        android:layout_width="203dp"
        android:layout_height="32dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/textfieldround"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/textData"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textNome"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/buttonlogin"
        android:text="@string/criar"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextFaixa"
        app:layout_constraintVertical_bias="0.433" />

    <TextView
        android:id="@+id/textNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="175dp"
        android:layout_marginLeft="175dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="123dp"
        android:layout_marginRight="123dp"
        android:fontFamily="@font/rubik_light"
        android:text="@string/nome_de_utilizador1"
        android:textColor="#13497B"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextNome"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextTitulo"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="97dp"
        android:layout_height="97dp"
        android:layout_marginBottom="196dp"
        android:background="@drawable/ic_avatar_svgrepo_com"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editTextTextData"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextTitulo"
        app:layout_constraintVertical_bias="1.0"
        android:contentDescription="@string/icon" />
</androidx.constraintlayout.widget.ConstraintLayout>