<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8FBFF"
    tools:context=".DefinicoesActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:background="#46D0D9"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button13"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:background="@drawable/ic_back"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar5"
        app:layout_constraintEnd_toEndOf="@+id/toolbar5"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="@+id/toolbar5"
        app:layout_constraintTop_toTopOf="@+id/toolbar5" />

    <Button
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="357dp"
        android:layout_height="46dp"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginBottom="31dp"
        android:background="@drawable/textfieldround"
        android:ems="10"
        android:fontFamily="@font/rubik_light"
        android:gravity="left|center_vertical"
        android:inputType="textEmailAddress"
        android:text="@string/localiza_o"
        android:textColor="#000000"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="RtlHardcoded,TextViewEdits" />

    <Button
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="357dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/textfieldround"
        android:ems="10"
        android:fontFamily="@font/rubik_light"
        android:gravity="left|center_vertical"
        android:inputType="textEmailAddress"
        android:text="@string/armazenamento"
        android:textColor="#000000"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
        tools:ignore="RtlHardcoded,TextViewEdits" />

    <Button
        android:id="@+id/editTextTextEmailAddress7"
        android:layout_width="357dp"
        android:layout_height="46dp"
        android:background="#143656"
        android:ems="10"
        android:fontFamily="@font/rubik_light"
        android:gravity="center_horizontal|center_vertical"
        android:inputType="textEmailAddress"
        android:text="Terminar Sessão"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:backgroundTint="@null"
        tools:ignore="RtlHardcoded,TextViewEdits"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="734dp" />

    <Button
        android:id="@+id/editTextTextEmailAddress4"
        android:layout_width="357dp"
        android:layout_height="46dp"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginBottom="376dp"
        android:background="@drawable/textfieldround"
        android:ems="10"
        android:fontFamily="@font/rubik_light"
        android:gravity="left|center_vertical"
        android:inputType="textEmailAddress"
        android:text="@string/c_mara"
        android:textColor="#000000"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress2"
        tools:ignore="RtlHardcoded,TextViewEdits" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="143dp"
        android:layout_height="30dp"
        android:layout_marginStart="125dp"
        android:layout_marginLeft="125dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="125dp"
        android:layout_marginRight="125dp"
        android:layout_marginBottom="512dp"
        android:fontFamily="@font/rubik_medium"
        android:text="@string/defini_es"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#143656"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        tools:ignore="UnknownIdInLayout" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_marginStart="160dp"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="106dp"
        android:layout_marginEnd="164dp"
        android:layout_marginRight="164dp"
        android:background="@drawable/ic_baseline_settings_24"
        android:contentDescription="@string/icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="1dp"
        android:background="@drawable/ic_subtract"
        android:contentDescription="@string/todo1"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.943"
        app:layout_constraintStart_toEndOf="@+id/editTextTextEmailAddress"
        app:layout_constraintTop_toTopOf="@+id/editTextTextEmailAddress"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="351dp"
        android:layout_marginLeft="351dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="1dp"
        android:background="@drawable/ic_subtract"
        android:contentDescription="@string/todo1"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextEmailAddress2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress2"
        app:layout_constraintTop_toTopOf="@+id/editTextTextEmailAddress2"
        app:layout_constraintVertical_bias="0.133" />

    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="351dp"
        android:layout_marginLeft="351dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="1dp"
        android:background="@drawable/ic_subtract"
        android:contentDescription="@string/todo1"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextEmailAddress4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress4"
        app:layout_constraintTop_toTopOf="@+id/editTextTextEmailAddress4"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>